# pyinstaller_scipy_msys

./: .gitignore  README.md  pyproject.toml  scipy_pyinstaller_bug_reproduction.py  test_scipy_pyinstaller.py
